<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_first_name_cell"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/txt_first_name"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark" />

        <TextView
            android:id="@+id/txt_last_name_cell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/txt_last_name"
            android:textColor="@android:color/background_dark"
            android:layout_weight="1"
            android:textColorHint="@android:color/background_dark" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_phone_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txt_phone"
        android:clickable="true"
        android:textColor="@android:color/background_dark"
        android:autoLink="phone"
        android:textColorHint="@android:color/background_dark" />

    <TextView
        android:id="@+id/txt_email_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:clickable="true"
        android:textColor="@android:color/background_dark"
        android:autoLink="email"
        android:textColorHint="@android:color/background_dark" />


</LinearLayout>