<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignment.hansi.photoschoppe.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_logout"
        android:text="@string/btn_logout"
        android:background="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:onClick="logoutPerformed"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/txt_view_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/btn_logout"
        android:gravity="center_horizontal"
        android:text="@string/hi_name"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_view_welocme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_view_hi"
        android:layout_alignStart="@+id/txt_view_hi"
        android:layout_below="@+id/txt_view_hi"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_message"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_view_welocme"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_portfolio"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:onClick="pressedPortfolio"
            android:text="@string/button_portfolio"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_directory"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:onClick="pressedDirectory"
            android:text="@string/button_directory"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/_button_more"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:onClick="pressedMore"
            android:text="@string/button_more"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
