<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_user_name_login"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/txt_user_name"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/background_dark"
        android:singleLine="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_password_login"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/txt_password"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/background_dark" />

    <Button
        android:text="@string/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"/>
</LinearLayout>