<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CA_txt_view_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:text="@string/txt_user_name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/CA_txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textColor="@android:color/background_dark"
            android:inputType="textPersonName"
            android:textColorLink="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:showDividers="beginning"
        android:visibility="visible">

        <TextView
            android:id="@+id/CA_txt_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@string/txt_email"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/CA_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:showDividers="beginning"
        android:visibility="visible">

        <TextView
            android:id="@+id/CA_txt_view_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@string/txt_password"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/CA_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@android:color/black"
            android:textSize="12sp"
            android:clickable="true"
            android:elevation="0dp" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:id="@+id/password_progress"
            android:layout_height="10dp"
            android:max="4"
            android:progress="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:showDividers="beginning"
        android:visibility="visible">

        <TextView
            android:id="@+id/CA_txt_view_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@string/txt_password_confirmed"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/CA_txt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@android:color/black"
            android:textSize="12sp"
            android:clickable="true"/>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/confirm_progress"
            android:max="4"
            android:progress="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/CA_button_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_dark"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/button_create_me"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="onClick"/>


</LinearLayout>